prepare fabir config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,24 +34,39 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//
+//            //leer  variables desde archivo  gradle.properties
+//            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
+//            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
+//            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
+//
+//        }
+//
+//            debug {
+//
+//            //leer  variables desde archivo  gradle.properties
+//            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
+//            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
+//            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
+//
+//        }
+
         release {
-            //leer  variables desde archivo  gradle.properties
-            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
-            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
-            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
-
-        }
-
-        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            //leer  variables desde archivo  gradle.properties
-            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
-            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
-            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
-
+            buildConfigField "String", "TWITTER_KEY", project.property("TWITTER_KEY")
+            buildConfigField "String", "TWITTER_SECRET", project.property("TWITTER_SECRET")
+            resValue "String", "FABRIC_API_KEY", project.property("FABRIC_API_KEY")
+        }
+        debug{
+            buildConfigField "String", "TWITTER_KEY", project.property("TWITTER_KEY")
+            buildConfigField "String", "TWITTER_SECRET", project.property("TWITTER_SECRET")
+            resValue "string", "FABRIC_API_KEY", project.property("FABRIC_API_KEY")
         }
     }
 }
@@ -61,7 +76,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     //twitter
-    compile("com.twitter.sdk.android:twitter:$rootProject.ext.twitterVersion") {
+    compile("com.twitter.sdk.android:twitter:1.13.3@aar") {
         transitive = true;
     }
 
@@ -82,9 +97,11 @@ dependencies {
     compile "javax.annotation:jsr250-api:$rootProject.ext.jsr250Version"
     compile "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
 
+    compile "org.webjars.bower:twitter:$rootProject.ext.twitterVersion"
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
     compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     compile "org.greenrobot:eventbus:$rootProject.ext.eventBusVersion"
+
 
 
 }
