--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-buildscript{
+buildscript {
 
-    repositories{
+    repositories {
         //fabric
-        maven { url 'https://maven.fabric.io/public'}
+        maven { url 'https://maven.fabric.io/public' }
     }
 
-    dependencies{
+    dependencies {
         //fabric
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -18,9 +18,9 @@ apply plugin: 'com.neenbedankt.android-apt'  //dagger
 apply plugin: 'io.fabric' // fabric
 
 
-repositories{
+repositories {
     //fabric
-    maven { url 'https://maven.fabric.io/public'}
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 android {
@@ -36,25 +36,6 @@ android {
     }
 
     buildTypes {
-//        release {
-//            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//
-//            //leer  variables desde archivo  gradle.properties
-//            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
-//            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
-//            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
-//
-//        }
-//
-//            debug {
-//
-//            //leer  variables desde archivo  gradle.properties
-//            buildConfigField "String" , "TWITTER_KEY" , project.property('TWITTER_KEY')
-//            buildConfigField "String" , "TWITTER_SECRET" , project.property('TWITTER_SECRET')
-//            resValue "string", "FABRIC_API_KEY" , project.property('FABRIC_API_KEY')
-//
-//        }
 
         release {
             minifyEnabled false
@@ -63,7 +44,7 @@ android {
             buildConfigField "String", "TWITTER_SECRET", project.property("TWITTER_SECRET")
             resValue "String", "FABRIC_API_KEY", project.property("FABRIC_API_KEY")
         }
-        debug{
+        debug {
             buildConfigField "String", "TWITTER_KEY", project.property("TWITTER_KEY")
             buildConfigField "String", "TWITTER_SECRET", project.property("TWITTER_SECRET")
             resValue "string", "FABRIC_API_KEY", project.property("FABRIC_API_KEY")
@@ -73,7 +54,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 
     //twitter
     compile("com.twitter.sdk.android:twitter:1.13.3@aar") {
@@ -104,4 +84,6 @@ dependencies {
 
 
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
+    testCompile 'junit:junit:4.12'
 }
