--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,29 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme.NoActionBar">
-
-
-
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
-        <!--Fabric API KEY-->
+        <!-- Fabric API KEY -->
         <meta-data
-            android:name = "io.fabric.ApiKey"
-            android:value = "45bd278880ab054320fca375cd4fb7fe1012c540" />
+            android:name="io.fabric.ApiKey"
+            android:value="45bd278880ab054320fca375cd4fb7fe1012c540" />
 
+        <activity android:name=".main.MainActivity"></activity>
     </application>
 
 </manifest>
