--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     }
 
     //SupportLibrary
-    compile "com.android.support:recyclerview-v7:$rootProject.ext.suppotLibraryVersion"
+    compile 'com.android.support:recyclerview-v7:22.+'
     compile "com.android.support:appcompat-v7:$rootProject.ext.suppotLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.ext.suppotLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.ext.suppotLibraryVersion"
